# rusty-bot

./: .gitignore  Cargo.toml  README.md  ticket_config.json
src/: main.rs
src/commands/: config.rs  help.rs  mod.rs  new.rs  ping.rs  shutdown.rs  test.rs
src/config/: ticket.rs
src/utils/: parsers.rs
