[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, version = "0.11", features = ["builder", "cache", "collector", "client", "model", "time", "http", "utils", "rustls_backend"] }
tokio = { version = "1.21.2", features = ["full"] }
dotenv = "0.15.0"
serde = "1.0.192"
serde_json = "1.0.108"
